Boton de borrar configurado: cuando se lo presiona, cambia a color blanco para borrar. color picker configurado: se puede elegir el color deseado a usar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="boton" id="botonBorrar">Borrar</button>
             <input type="color" class="boton" id="botonColor">
             <div class="colores"> 
-                <p id="tamaño">hola</p>
+                <p id="tamaño"></p>
                 <input type="range" id="barra" value="10" max="30" min="4">
             </div>
         </div>
