Agregado de boton 'rainbow'; cambia el color al clickearse en el tablero

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="botones">
             <button class="boton" id="botonLimpiar">Limpiar Tablero</button>
             <button class="boton" id="botonBorrar">Borrar</button>
+            <button class="boton" id="botonRainbow">Rainbow</button>
             <input type="color" class="boton" id="botonColor">
             <div class="colores"> 
                 <p id="tamaño"></p>
